# AlbumsAventures

./: .gitignore  .pre-commit-config.yaml  AlbumsAventures-BE.py  AlbumsAventures.code-workspace  AlbumsAventures_BE_test.py  README.md  apm.lock.yaml  apm.yml  aventures.sqlite  flow_diagram.drawio  package-lock.json  pyproject.toml  pytest_be.txt  pytest_out.txt  requirements.txt  restart_service.sh  run_test_login.py  test_frontend_login.py  test_share_album.py
.agents/skills/prompt-analyze/: SKILL.md
.agents/skills/prompt-builder/: SKILL.md
.agents/skills/prompt-refactor/: SKILL.md
.agents/skills/rpi-research/: SKILL.md
.agents/skills/squad/: SKILL.md
.agents/skills/vally-tests/: SKILL.md
.copilot-tracking/changes/2026-07-07/: albumsaventures-phase1-security-changes.md  albumsaventures-phase2-uploads-changes.md  albumsaventures-phase3-spa-increment1-changes.md  albumsaventures-phase3-spa-increment2-changes.md  albumsaventures-phase3-spa-increment3-changes.md  albumsaventures-phase3-spa-increment4-changes.md  albumsaventures-phase3-spa-increment5-changes.md  albumsaventures-phase3-spa-increment6-changes.md  albumsaventures-phase3-spa-increment7-changes.md  albumsaventures-phase3-spa-increment8-changes.md  (+1 more)
.copilot-tracking/plans/: albumsaventures-jinja-decommission-completion-plan.md  albumsaventures-jinja-decommission-plan.md  albumsaventures-modernization.md  albumsaventures-phase3-spa.md
.copilot-tracking/squad/: consumption-rates.md  consumption.md  decisions.md  notifications.md  routing.md  state.json  team.md
.github/agents/: implementation-validator.agent.md  phase-implementor.agent.md  plan-validator.agent.md  prompt-builder.agent.md  prompt-evaluator.agent.md  prompt-tester.agent.md  prompt-updater.agent.md  researcher-subagent.agent.md  rpi-agent.agent.md  squad-coordinator.agent.md  task-implementor.agent.md  task-planner.agent.md  task-researcher.agent.md  task-reviewer.agent.md  vally-test-author.agent.md
.github/instructions/: copilot-tracking.instructions.md  prompt-builder.instructions.md  squad-roster.instructions.md  squad-state.instructions.md
backend/albums/: folder.py
backend/db/: crud.py  db_connect.py  db_fill.py  models.py  schemas.py
backend/routers/: be_album.py  be_auth.py  be_category.py  be_formatter.py  be_group.py  be_media_bridge.py  be_resizer.py  be_user.py
docs/: Bulk-upload.md  GESTION_FORMATS.md  GESTION_IMAGES.md  GESTION_REPERTOIRES.md  GUIDELINES_UI.md  TODO.md  agent.md
frontend/: spa_serving.py
frontend/routers/: fe_redirects.py  fe_router.py
frontend/spa/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/templates/: admin_groups.html  admin_users.html  album_detail.html  album_edit.html  album_form.html  album_upload.html  base.html  forgot_password.html  index.html  login.html  profile.html  reset_password.html  shared_album.html  signup.html
tests/: __init__.py  conftest.py  test_albums.py  test_auth.py  test_media_bridge.py  test_upload.py
tests/e2e/: __init__.py  conftest.py  test_admin_groups_ui.py  test_admin_users_ui.py  test_album_ui.py  test_login_ui.py  test_navigation_ui.py  test_profile_ui.py  test_shared_album_ui.py  test_spa_admin_ui.py  test_spa_album_detail_ui.py  test_spa_album_grid_ui.py  test_spa_auth_ui.py  test_spa_profile_ui.py  test_spa_shared_album_ui.py  test_spa_upload_ui.py
utils/: auth.py  config.py  csrf.py  email.py  password.py  rate_limit.py  secret_store.py  security.py  win_fcntl_shim.py
(+96 files in other folders)
